--- a/authors.html
+++ b/authors.html
@@ -13,22 +13,24 @@ title: Authors
       </header>
       <section>
 
-<p>The code and content of this site is licensed under <a href="http://people.freebsd.org/~phk">Beerware</a> license:</p>
-<blockquote><p>"THE BEER-WARE LICENSE" (Revision 42):<br>
-Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.</p></blockquote>
+<p>The code and content of this site is licensed under <a href="http://people.freebsd.org/~phk" title="Beerware license">Beerware</a> license:</p>
+<blockquote>
+  "THE BEER-WARE LICENSE" (Revision 42):<br>
+  Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.
+</blockquote>
 
 <p>This site uses:
   <ul>
-    <li><a href="http://jekyllrb.com/">Jekyll</a> that licensed under <a href="http://opensource.org/licenses/MIT">MIT License</a>.</li>
-    <li>The source theme was created by <a href="https://github.com/orderedlist/minimal">Steve Smith</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
-    <li>Disqus, which is used for comment block, has own <a href="http://help.disqus.com/customer/portal/articles/466260-terms-of-service">custom license</a>.</li>
-    <li>The spoiler block was created by <a href="http://www.cyberforum.ru/post5368179.html">markeley</a> and <a href="http://habrahabr.ru/post/167151/">Defff</a> and it looks like it has no any license.</li>
-    <li>This site uses RSS template, which was suggested by <a href="https://github.com/snaptortoise/jekyll-rss-feeds">snaptortoise</a>.</li>
-    <li>Google Custom Search is licensed under own <a href="https://support.google.com/customsearch/answer/1714300">custom license</a>.</li>
-    <li>Sharethis have own <a href="http://www.sharethis.com/legal/publisher-terms-of-use">custom license</a> too.</li>
+    <li><a href="http://jekyllrb.com/" title="Jekyll site">Jekyll</a> that licensed under <a href="http://opensource.org/licenses/MIT" title="MIT license">MIT License</a>.</li>
+    <li>The source theme was created by <a href="https://github.com/orderedlist/minimal" title="GitHub">Steve Smith</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0" title="CC BY-SA license">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
+    <li>Disqus, which is used for comment block, has own <a href="http://help.disqus.com/customer/portal/articles/466260-terms-of-service" title="Disqus license">custom license</a>.</li>
+    <li>The spoiler block was created by <a href="http://www.cyberforum.ru/post5368179.html" title="Forum post">markeley</a> and <a href="http://habrahabr.ru/post/167151/" title="Habrahabr post">Defff</a> and it looks like it has no any license.</li>
+    <li>This site uses RSS template, which was suggested by <a href="https://github.com/snaptortoise/jekyll-rss-feeds" title="GitHub">snaptortoise</a>.</li>
+    <li>Google Custom Search is licensed under own <a href="https://support.google.com/customsearch/answer/1714300" title="Google license">custom license</a>.</li>
+    <li>Sharethis have own <a href="http://www.sharethis.com/legal/publisher-terms-of-use" title="ShareThis license">custom license</a> too.</li>
   </ul>
 </p>
 
-<p>Special thanks to <a href="http://monztruo.deviantart.com/">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">his icon</a>.</p>
+<p>Special thanks to <a href="http://monztruo.deviantart.com/" title="Devianart">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946" title="Source image">his icon</a>.</p>
 
 <p align="center">&copy; Evgeniy Alekseev, 2014-{{ site.time | date: '%Y' }}</p>
