--- a/about.html
+++ b/about.html
@@ -10,19 +10,22 @@ title: About me
     <div class="wrapper">
       <header>
         <h1>{{ page.title }}</h1>
-
-        <p class="view"><a href="https://github.com/arcan1s">GitHub Profile</a><br>
-        <a href="https://www.archlinux.org/trustedusers/#arcanis">TU Profile on archlinux.org</a><br>
-        <a href="http://istina.msu.ru/profile/arcanis">Some of my publications</a><br>
-        PGP signature: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a><br>
-        <a href="ftp://repo.arcanis.name/public">Public keys</a></p>
+        <p class="view">
+          <a href="https://github.com/arcan1s" title="GitHub">GitHub Profile</a><br>
+          <a href="https://www.archlinux.org/trustedusers/#arcanis" title="TU profile">TU Profile on archlinux.org</a><br>
+          <a href="http://istina.msu.ru/profile/arcanis" title="Publications">Some of my publications</a><br>
+          PGP signature: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a><br>
+          <a href="ftp://repo.arcanis.name/public" title="Keys">Public keys</a>
+        </p>
 
         <h2>Contacts</h2>
-        <p class="view">Alias: arcanis/arcan1s<br>
-        IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a><br>
-        ICQ: 407-398-235 <img src="http://www.icq.com/scripts/online.dll?icq=407398235&img=27" border="0"><br>
-        Jabber: arcanis (at) jabber (dot) ru<br>
-        E-mail: <a href="mailto:darkarcanis@mail.ru">darkarcanis (at) mail (dot) ru</a></p>
+        <p class="view">
+          Alias: arcanis/arcan1s<br>
+          IRC: <a href="irc://irc.freenode.net/arcan1s" title="Freenode">arcan1s</a><br>
+          ICQ: 407-398-235<br>
+          Jabber: arcanis (at) jabber (dot) ru<br>
+          E-mail: <a href="mailto:darkarcanis@mail.ru" title="email">darkarcanis (at) mail (dot) ru</a>
+        </p>
 
       </header>
       <section>
@@ -34,31 +37,42 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 ------END GEEK CODE BLOCK------
 {% endhighlight %}
 
-<p align="center"><a href="/resources/screenshots/photo_siicm.png"><img src="/resources/preview/photo_siicm_prev.jpg"></a></p>
-<p align="right"><i>Photo by Grineva O.V.</i></p>
+<figure class="sign">
+<a href="/resources/screenshots/photo_siicm.png" title="Full size">
+    <img src="/resources/preview/photo_siicm_prev.jpg" alt="Photo">
+  </a>
+  <figcaption>Photo by Grineva O.V.</figcaption>
+</figure>
 
-<p>My name is Evgeniy Alekseev and I'm from Siberia (seriously, I was born in <a href="https://maps.google.com/maps?f=q&source=s_q&hl=ru&geocode=&q=russia,+Krasnoyarskiy+kray,+Sosnovoborsk&aq=&sll=56.133333,93.366667&sspn=0.100635,0.326843&vpsrc=6&g=%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F,+Krasnoyarskiy+kray,+Sosnovoborsk&ie=UTF8&hq=&hnear=%D0%A1%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BE%D0%B1%D0%BE%D1%80%D1%81%D0%BA,+%D0%B3%D0%BE%D1%80%D0%BE%D0%B4+%D0%A1%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BE%D0%B1%D0%BE%D1%80%D1%81%D0%BA,+%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%BE%D1%8F%D1%80%D1%81%D0%BA%D0%B8%D0%B9+%D0%BA%D1%80%D0%B0%D0%B9,+%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F&ll=56.316537,95.712891&spn=25.891057,83.671875&t=m&z=4&iwloc=A">Siberia</a>). In the global Internet I have usually nickname <code>arcan1s</code>, but in the Russian segment it is usually <code>arcanis</code>. I'm a graduate of <a href="http://www.chem.msu.ru/">the Department of Chemistry</a>, Moscow State University and now I'm a PhD student and working in my University. My speciality is a theoretical chemistry (like molecular physics and some of quantum chemistry).</p>
+<p>My name is Evgeniy Alekseev and I'm from Siberia (seriously, I was born in <a href="https://maps.google.com/maps?f=q&source=s_q&hl=ru&geocode=&q=russia,+Krasnoyarskiy+kray,+Sosnovoborsk&aq=&sll=56.133333,93.366667&sspn=0.100635,0.326843&vpsrc=6&g=%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F,+Krasnoyarskiy+kray,+Sosnovoborsk&ie=UTF8&hq=&hnear=%D0%A1%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BE%D0%B1%D0%BE%D1%80%D1%81%D0%BA,+%D0%B3%D0%BE%D1%80%D0%BE%D0%B4+%D0%A1%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BE%D0%B1%D0%BE%D1%80%D1%81%D0%BA,+%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%BE%D1%8F%D1%80%D1%81%D0%BA%D0%B8%D0%B9+%D0%BA%D1%80%D0%B0%D0%B9,+%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F&ll=56.316537,95.712891&spn=25.891057,83.671875&t=m&z=4&iwloc=A" title="Google Maps">Siberia</a>). In the global Internet I have usually nickname <code>arcan1s</code>, but in the Russian segment it is usually <code>arcanis</code>. I'm a graduate of <a href="http://www.chem.msu.ru/" title="Department site">the Department of Chemistry</a> Moscow State University and now I'm a PhD student and working in my University. My speciality is a theoretical chemistry (like molecular physics and some of quantum chemistry).</p>
 
-<p>At leisure I write small applications on C, C++ and Python (and some application scripts on Shell). In order not to seem like a bearded nerd sometimes I listen music and read <a href="http://en.wikipedia.org/wiki/Robert_Jordan">Robert Jordan's</a> or <a href="http://en.wikipedia.org/wiki/George_R.R._Martin">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="ftp://repo.arcanis.name/">my home server</a>.</p>
+<p>At leisure I write small applications on C, C++ and Python (and some application scripts on Shell). In order not to seem like a bearded nerd sometimes I listen music and read <a href="http://en.wikipedia.org/wiki/Robert_Jordan" title="Wiki">Robert Jordan's</a> or <a href="http://en.wikipedia.org/wiki/George_R.R._Martin" title="Wiki">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="ftp://repo.arcanis.name/" title="ftp">my home server</a>.</p>
 <label class="spoiler">
-<input type="checkbox" tabindex="-1">
+  <input type="checkbox" tabindex="-1">
   <div class="box">
-    <p>The connection information
-    <blockquote>
-      User is <code>music</code>, password is the same.</p>
-    </blockquote>
+    <p>
+      The connection information
+      <blockquote>
+        User is <code>music</code>, password is the same.
+      </blockquote>
+    </p>
   </div>
 </label>
 
-<p>Also I'm an <a href="https://www.archlinux.org/">Archlinux</a> user (maybe that's why I look like a bearded nerd). And in October 2013 I became an Archlinux Trusted User:</p>
+<p>Also I'm an <a href="https://www.archlinux.org/" title="Archlinux">Archlinux</a> user (maybe that's why I look like a bearded nerd). And in October 2013 I became an Archlinux Trusted User:</p>
 <blockquote cite="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">
-The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.</blockquote>
-<p align="right">&copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">ArchWiki</a></p>
+  The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.
+</blockquote>
+<p align="right">
+  &copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/" title="ArchWiki">ArchWiki</a>
+</p>
 
 <p>All contact information can be found on the left. Feel free to contact me with any questions. Oh, wait! If you will write me to ICQ or jabber you must correctly answer antispam bot's question first. The question is:</p>
+
 {% highlight c %}
 int i = 1;
 i = ++i + ++i;
 return i;
 {% endhighlight %}
+
 <p>And the correct answer is <code>5</code> (or <code>6</code>, as you wish).</p>
