--- a/projects/index.html
+++ b/projects/index.html
@@ -13,15 +13,15 @@ groups:
             short: git-etc
             description: <code>git-etc</code> is a simple daemon that automatically creates git repository in the given directory and creates commit at the specified time interval. It is written on <code>Bash</code>. It is also has a simple Graphical user interface written on <code>Python2</code> (<code>pyqt4</code>) for work with the created repository.
             links:
-                - <a href="/projects/git-etc">Homepage</a>
-                - <a href="https://github.com/arcan1s/git-etc">GitHub repo</a>
-                - <a href="https://aur.archlinux.org/packages/git-etc">Archlinux AUR package</a>
+                - <a href="/projects/git-etc" title="Homepage">Homepage</a>
+                - <a href="https://github.com/arcan1s/git-etc" title="GitHub">GitHub repo</a>
+                - <a href="https://aur.archlinux.org/packages/git-etc" title="AUR">Archlinux AUR package</a>
           - title: queued
             short: queued
             description: <code>queued</code> is daemon for starting jobs to queue of calculations. It was written on <code>Bash</code> created as proof-of-concept.
             links:
-                - <a href="/projects/queued">Homepage</a>
-                - <a href="https://github.com/arcan1s/queued">GitHub repo</a>
+                - <a href="/projects/queued" title="Homepage">Homepage</a>
+                - <a href="https://github.com/arcan1s/queued" title="GitHub">GitHub repo</a>
     - title: KDE widgets
       short: widgets
       projects:
@@ -29,35 +29,35 @@ groups:
             short: deadline
             description: <code>DeadLine widget</code> is a Plasmoid script written on <code>Python2</code>. It is able to create jobs, and add reminders to them. Now this project has a pre-alpha stage. Someday maybe I will complete it.
             links:
-                - <a href="https://github.com/arcan1s/deadlinewidget">GitHub repo</a>
+                - <a href="https://github.com/arcan1s/deadlinewidget" title="GitHub">GitHub repo</a>
           - title: Oblikue strategies
             short: oblikuestrategies
-            description: <code>oblikue-strategies</code> is a plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies">Oblique Strategies</a>. It is <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405">GNOME applet</a> fork with some of special features.
+            description: <code>oblikue-strategies</code> is a plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies" title="Wiki">Oblique Strategies</a>. It is <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405" title="gnome-look">GNOME applet</a> fork with some of special features.
             links:
-                - <a href="/projects/oblikuestrategies">Homepage</a>
-                - <a href="https://github.com/arcan1s/oblikuestrategies">GitHub repo</a>
-                - <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">Page on kde-look.org</a>
-                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">Archlinux AUR package</a>
+                - <a href="/projects/oblikuestrategies" title="Homepage">Homepage</a>
+                - <a href="https://github.com/arcan1s/oblikuestrategies" title="GitHub">GitHub repo</a>
+                - <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">Page on kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies" title="AUR">Archlinux AUR package</a>
           - title: Open on desktop
             short: openondesktop
-            description: <code>Open on desktop</code> is a dropbox menu for <a href="http://dolphin.kde.org">Dolhpin</a>. It creates a group in the context menu, which opens a file to the specified desktop when clicked. It has an install script written on <code>Bash</code>.
+            description: <code>Open on desktop</code> is a dropbox menu for <a href="http://dolphin.kde.org" title="Dolphin Homepage">Dolhpin</a>. It creates a group in the context menu, which opens a file to the specified desktop when clicked. It has an install script written on <code>Bash</code>.
             links:
-                - <a href="https://github.com/arcan1s/openondesktop">GitHub repo</a>
+                - <a href="https://github.com/arcan1s/openondesktop" title="GitHub">GitHub repo</a>
           - title: py-text-monitor
             short: pytextmonitor
-            description: <code>py-text-monitor</code> is a minimalistic Plasmoid script written on <code>Python2</code>. It looks like widgets in <a href="http://awesome.naquadah.org/">Awesome WM</a>. My plasmoid is highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).
+            description: <code>py-text-monitor</code> is a minimalistic Plasmoid script written on <code>Python2</code>. It looks like widgets in <a href="http://awesome.naquadah.org/" title="Awesome Homepage">Awesome WM</a>. My plasmoid is highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Developers tutorial">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).
             links:
-                - <a href="/projects/pytextmonitor">Homepage</a>
-                - <a href="https://github.com/arcan1s/pytextmonitor">GitHub repo</a>
-                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">Plasmoid page on kde-look.org</a>
-                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">DataEngine page on kde-look.org</a>
-                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">Archlinux AUR package</a>
+                - <a href="/projects/pytextmonitor" title="Homepage">Homepage</a>
+                - <a href="https://github.com/arcan1s/pytextmonitor" title="GitHub">GitHub repo</a>
+                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124" title="kde-look">Plasmoid page on kde-look.org</a>
+                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">DataEngine page on kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor" title="AUR">Archlinux AUR package</a>
           - title: Kit system monitor
             short: sysmon
-            description: <code>Kit System Monitor</code> is a system information and hardware monitor based on EG Sysmon. It is written on HTML-like language for <a href="http://netdragon.sourceforge.ne/">SuperKaramba</a> and has simple install script written on <code>Python2</code>. It is my first Open Source Project.
+            description: <code>Kit System Monitor</code> is a system information and hardware monitor based on EG Sysmon. It is written on HTML-like language for <a href="http://netdragon.sourceforge.ne/" title="SuperKaramba Homepage">SuperKaramba</a> and has simple install script written on <code>Python2</code>. It is my first Open Source Project.
             links:
-                - <a href="https://github.com/arcan1s/sysmon">GitHub repo</a>
-                - <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">Page on kde-look.org</a>
+                - <a href="https://github.com/arcan1s/sysmon" title="GitHub">GitHub repo</a>
+                - <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246" title="kde-look">Page on kde-look.org</a>
     - title: Scientific programs
       short: science
       projects:
@@ -65,8 +65,8 @@ groups:
             short: moldyn
             description: They are represented by a single repository. It contains some programs for analysis of molecular dynamic trajectories using statistical mechanics and some of maths methods (e.g. graph theory). Usualy backend programs are written on <code>C</code>, but sometimes on <code>Python2</code>. Some of these have a Graphical user interface written on <code>CPP</code>.
             links:
-                - <a href="/projects/moldyn">Homepage</a>
-                - <a href="https://github.com/arcan1s/moldyn">GitHub repo</a>
+                - <a href="/projects/moldyn" title="Homepage">Homepage</a>
+                - <a href="https://github.com/arcan1s/moldyn" title="GitHub">GitHub repo</a>
     - title: Utilities
       short: utilities
       projects:
@@ -74,26 +74,26 @@ groups:
             short: extpkg
             description: <code>extract_pkglist</code> a simple script written on <code>Python2</code> for creating list of installed packages in ArchLinux.
             links:
-                - <a href="https://github.com/arcan1s/extract_pkglist">GitHub repo</a>
+                - <a href="https://github.com/arcan1s/extract_pkglist" title="GitHub">GitHub repo</a>
           - title: Food GUI
             short: foodgui
             description: <code>Food GUI</code> is a simple program-calculator that uses own database and written on <code>Python2</code>. It calculates proteins, fats, carbohydrates, food energy and glycemic index of eaten food. It is my first project with GUI and was made just-for-fun (and for my ex-girlfriend). It also has a binary version for Win64.
             links:
-                - <a href="https://github.com/arcan1s/food_gui">GitHub repo</a>
-                - <a href="https://aur.archlinux.org/packages/food_gui">Archlinux AUR package</a>
+                - <a href="https://github.com/arcan1s/food_gui" title="GitHub">GitHub repo</a>
+                - <a href="https://aur.archlinux.org/packages/food_gui" title="AUR">Archlinux AUR package</a>
           - title: julius-actions
             short: julius-actions
-            description: <code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.
+            description: <code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="http://julius.sourceforge.jp/en_index.php" title="Julius Homepage">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.
             links:
-                - <a href="https://github.com/arcan1s/julius-actions">GitHub repo</a>
+                - <a href="https://github.com/arcan1s/julius-actions" title="GitHub">GitHub repo</a>
           - title: Netctl GUI
             short: netctl-gui
             description: <code>Netctl GUI</code> graphical interface for <code>netctl</code> (several scripts for work with network connection in Archlinux). It is written on <code>CPP</code> using <code>Qt4</code> library. Now it may work with profiles and may create new profiles. Also it may create a connection to WiFi. Moreover, it provides a widget and DataEngine for KDE.
             links:
-                - <a href="/projects/netctl-gui">Homepage</a>
-                - <a href="https://github.com/arcan1s/netctlplasmoid">GitHub repo</a>
-                - Page on <a href="http://kde-apps.org/content/show.php?content=164490">kde-apps.org</a>
-                - <a href="https://aur.archlinux.org/packages/netctl-gui">Archlinux AUR package</a>
+                - <a href="/projects/netctl-gui" title="Homepage">Homepage</a>
+                - <a href="https://github.com/arcan1s/netctlplasmoid" title="GitHub">GitHub repo</a>
+                - Page on <a href="http://kde-apps.org/content/show.php?content=164490" title="kde-apps">kde-apps.org</a>
+                - <a href="https://aur.archlinux.org/packages/netctl-gui" title="AUR">Archlinux AUR package</a>
 ---
   <body>
     <div class="wrapper">
@@ -102,21 +102,21 @@ groups:
         <p class="view">The list of some of my projects</p>
         <p class="view">
           {% for group in page.groups %}
-            <a href="#{{ group.short }}">{{ group.title }}</a><br>
+            <a href="#{{ group.short }}" title="{{ group.title }}">{{ group.title }}</a><br>
           {% endfor %}
         </p>
       </header>
       <section>
 
-  {% for group in page.groups %}
-    <h1><a name="{{ group.short }}" class="anchor" href="#{{ group.short }}"><span class="octicon octicon-link"></span></a>{{ group.title }}</a></h1>
-    {% for project in group.projects %}
-      <h2><a name="{{ project.short }}" class="anchor" href="#{{ project.short }}"><span class="octicon octicon-link"></span></a>{{ project.title }}</h2>
-      <p>{{ project.description }}</p>
-      <p><ul>
-        {% for link in project.links %}
-          <li>{{ link }}</li>
-        {% endfor %}
-      </ul></p>
-    {% endfor %}
+{% for group in page.groups %}
+  <h1><a href="#{{ group.short }}" class="anchor" name="{{ group.short }}"><span class="octicon octicon-link"></span></a>{{ group.title }}</h1>
+  {% for project in group.projects %}
+    <h2><a href="#{{ project.short }}" class="anchor" name="{{ project.short }}"><span class="octicon octicon-link"></span></a>{{ project.title }}</h2>
+    <p>{{ project.description }}</p>
+    <p><ul>
+      {% for link in project.links %}
+        <li>{{ link }}</li>
+      {% endfor %}
+    </ul></p>
   {% endfor %}
+{% endfor %}
