--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -8,14 +8,16 @@ developers:
     - Evgeniy Alelseev
 license: GPLv3
 links:
-    - Page on <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml">Softpedia</a>
-    - Page on <a href="http://kde-apps.org/content/show.php?content=164490">kde-apps.org</a>
-    - <a href="https://aur.archlinux.org/pkgbase/netctl-gui/">AUR package</a>
+    - Page on <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml" title="Softpedia">Softpedia</a>
+    - Page on <a href="http://kde-apps.org/content/show.php?content=164490" title="kde-apps">kde-apps.org</a>
+    - <a href="https://aur.archlinux.org/pkgbase/netctl-gui/" title="AUR">AUR package</a>
 ---
 <!-- info block -->
-<h2><a name="info" class="anchor" href="#info"><span class="octicon octicon-link"></span></a>Information</h2>
+<h2><a href="#info" class="anchor" name="info"><span class="octicon octicon-link"></span></a>Information</h2>
 <p>Graphical interface for <code>netctl</code> (several scripts for work with network connection in Archlinux). It is written on <code>CPP</code> using <code>Qt4</code> library. Now it may work with profiles and may create new profiles. Also it may create a connection to WiFi. Moreover, it provides a Qt library for interaction with netctl and widget and DataEngine for KDE.</p>
-<p><b>NOTE:</b> <a href="https://github.com/arcan1s/netctl-gui/issues/3">LOOKING FOR TRANSLATORS!</a></p>
+
+<p><b>NOTE:</b> <a href="https://github.com/arcan1s/netctl-gui/issues/3" title="Ticket">LOOKING FOR TRANSLATORS!</a></p>
+
 {% highlight bash %}
 $ netctl-gui --help
 Usage:
@@ -49,30 +51,31 @@ Show messages:
    -h           --help                   - show this help and exit
 {% endhighlight %}
 
-<h3><a name="devel" class="anchor" href="#devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
+<h3><a class="anchor" href="#devel" name="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
 <ul>
   {% for devel in page.developers %}
     <li>{{ devel }}</li>
   {% endfor %}
 </ul>
 
-<h3><a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
+<h3><a href="#license" class="anchor" name="license"><span class="octicon octicon-link"></span></a>License</h3>
 <ul>
   <li>{{ page.license }}</li>
 </ul>
 
-<h3><a name="changelog" class="anchor" href="#changelog"><span class="octicon octicon-link"></span></a>Changelog</h3>
-<p><a href="https://github.com/arcan1s/netctl-gui/blob/master/CHANGELOG">CHANGELOG</a></p>
+<h3><a href="#changelog" class="anchor" name="changelog"><span class="octicon octicon-link"></span></a>Changelog</h3>
+<p><a href="https://github.com/arcan1s/netctl-gui/blob/master/CHANGELOG" title="GitHub">CHANGELOG</a></p>
 <!-- end of info block -->
 
 <!-- install block -->
-<h2><a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Installation</h2>
+<h2><a href="#install" class="anchor" name="install"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<h3><a name="instruction" class="anchor" href="#instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
+<h3><a href="#instruction" class="anchor" name="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li><p>Download an <a href="https://github.com/arcan1s/netctl-gui/releases">archive</a> with latest version of source files.</p></li>
+  <li><p>Download an <a href="https://github.com/arcan1s/netctl-gui/releases" title="GitHub">archive</a> with latest version of source files.</p></li>
   <li><p>Extract it and install the application:</p>
 <p>If you want install it into <code>/</code>, you should run as root following commands:</p>
+
 {% highlight bash %}
 cd /path/to/extracted/archive
 mkdir build && cd build
@@ -80,6 +83,7 @@ cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release ../
 make
 sudo make install
 {% endhighlight %}
+
 <p>Available cmake flags are:</p>
   <ul>
     <li><code>-DBUILD_DATAENGINE:BOOL=0</code> - do not build DataEngine;</li>
@@ -92,7 +96,7 @@ sudo make install
   </li>
 </ul>
 
-<h3><a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
+<h3><a href="#dependencies" class="anchor" name="dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
 <p>I want note that all were tested on latest version of dependencies.</p>
 <ul>
   <li>netctl</li>
@@ -102,43 +106,58 @@ sudo make install
   <li>qt5-tools <i>(make, if Qt5 is used)</i></li>
   <li>kdebase-workspace <i>(optional, widget)</i></li>
   <li>sudo <i>(optional, sudo support)</i></li>
-  <li>wpa_supplicant <i>(optional, WiFi support)</i></
+  <li>wpa_supplicant <i>(optional, WiFi support)</i></li>
 </ul>
 <!-- end of install block -->
 
 <!-- howto block -->
-<h2><a name="howto" class="anchor" href="#howto"><span class="octicon octicon-link"></span></a>How to use</h2>
+<h2><a href="#howto" class="anchor" name="howto"><span class="octicon octicon-link"></span></a>How to use</h2>
 <p>Just run application <code>netctl-gui</code>. If it is needed (and if you use KDE), you may add widget <code>netctl</code>, which provides by the application.</p>
 <!-- end of howto block -->
 
 <!-- config block -->
-<h2><a name="config" class="anchor" href="#config"><span class="octicon octicon-link"></span></a>Configuration</h2>
+<h2><a href="#config" class="anchor" name="config"><span class="octicon octicon-link"></span></a>Configuration</h2>
 <p>It is recommended to use graphical interface for widget and DataEngine configuration. All settings of GUI are stored in <code>$HOME/.config/netctl-gui.conf</code>. It is highly recommended to edit it from graphical interface. </p>
 <!-- end of config block -->
 
 <!-- gui block -->
-<h2><a name="gui" class="anchor" href="#gui"><span class="octicon octicon-link"></span></a>Graphical user interface</h2>
+<h2><a href="#gui" class="anchor" name="gui"><span class="octicon octicon-link"></span></a>Graphical user interface</h2>
 <p>Graphical interface provides by <code>netctl-gui</code> application.</p>
 
 <h3><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
-<p>DataEngine:<br>
-<a href="/resources/screenshots/netctl-gui_dataengine.png"><img src="/resources/preview/netctl-gui_dataengine_prev.jpg"></a><br>
-Widget:<br>
-<a href="/resources/screenshots/netctl-gui_plasmoid.png"><img src="/resources/preview/netctl-gui_plasmoid_prev.jpg"></a><br>
-Widget settings window:<br>
-<a href="/resources/screenshots/netctl-gui_plasmoid_conf_01.png"><img src="/resources/preview/netctl-gui_plasmoid_conf_01_prev.jpg"></a><br>
-<a href="/resources/screenshots/netctl-gui_plasmoid_conf_02.png"><img src="/resources/preview/netctl-gui_plasmoid_conf_02_prev.jpg"></a><br>
-<a href="/resources/screenshots/netctl-gui_plasmoid_conf_03.png"><img src="/resources/preview/netctl-gui_plasmoid_conf_03_prev.jpg"></a><br>
-Main window:<br>
-<a href="/resources/screenshots/netctl-gui_main.png"><img src="/resources/preview/netctl-gui_main_prev.jpg"></a><br>
-Profile creation tab:<br>
-<a href="/resources/screenshots/netctl-gui_profile.png"><img src="/resources/preview/netctl-gui_profile_prev.jpg"></a><br>
-WiFi menu:<br>
-<a href="/resources/screenshots/netctl-gui_wifi.png"><img src="/resources/preview/netctl-gui_wifi_prev.jpg"></a><br>
-About window:<br>
-<a href="/resources/screenshots/netctl-gui_about.png"><img src="/resources/preview/netctl-gui_about_prev.jpg"></a><br>
-netctl-auto window:<br>
-<a href="/resources/screenshots/netctl-gui_netctl-auto.png"><img src="/resources/preview/netctl-gui_netctl-auto_prev.jpg"></a><br>
-Settings window:<br>
-<a href="/resources/screenshots/netctl-gui_settings.png"><img src="/resources/preview/netctl-gui_settings_prev.jpg"></a></p>
+<p>
+  {% assign scrdesc = "DataEngine" %}
+  {% assign scrname = "netctl-gui_dataengine" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Widget" %}
+  {% assign scrname = "netctl-gui_plasmoid" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Widget settings window" %}
+  {% assign scrname = "netctl-gui_plasmoid_conf_01" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Widget settings window" %}
+  {% assign scrname = "netctl-gui_plasmoid_conf_02" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Widget settings window" %}
+  {% assign scrname = "netctl-gui_plasmoid_conf_03" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Main window" %}
+  {% assign scrname = "netctl-gui_main" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Profile window" %}
+  {% assign scrname = "netctl-gui_profile" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "WiFi window" %}
+  {% assign scrname = "netctl-gui_wifi" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "About window" %}
+  {% assign scrname = "netctl-gui_about" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "netctl-auto window" %}
+  {% assign scrname = "netctl-gui_netctl-auto" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Settings window" %}
+  {% assign scrname = "netctl-gui_settings" %}
+  {% include prj_scr.html %}
+</p>
 <!-- end of gui block -->
