--- a/projects/queued.html
+++ b/projects/queued.html
@@ -10,8 +10,9 @@ license: GPLv3
 links:
 ---
 <!-- info block -->
-<h2><a name="info" class="anchor" href="#info"><span class="octicon octicon-link"></span></a>Information</h2>
+<h2><a href="#info" class="anchor" name="info"><span class="octicon octicon-link"></span></a>Information</h2>
 <p>Daemon for starting jobs to queue of calculations. It was written as proof-of-concept.</p>
+
 {% highlight bash %}
 $ queued --help
 Simple daemon written on BASH for starting jobs to queue of calculations
@@ -34,37 +35,41 @@ Parameters:
     -h   --help               - show this help and exit
 {% endhighlight %}
 
-<h3><a name="devel" class="anchor" href="#devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
+<h3><a href="#devel" class="anchor" name="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
 <ul>
   {% for devel in page.developers %}
     <li>{{ devel }}</li>
   {% endfor %}
 </ul>
 
-<h3><a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
+<h3><a href="#license" class="anchor" name="license"><span class="octicon octicon-link"></span></a>License</h3>
 <ul>
   <li>{{ page.license }}</li>
 </ul>
 <!-- end of info block -->
 
 <!-- install block -->
-<h2><a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Installation</h2>
+<h2><a href="#install" class="anchor" name="install"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<h3><a name="instruction" class="anchor" href="#instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
+<h3><a href="#instruction" class="anchor" name="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li><p>Download an <a href="https://github.com/arcan1s/queued/releases">archive</a> with latest version of source files.</p></li>
+  <li><p>Download an <a href="https://github.com/arcan1s/queued/releases" title="GitHub">archive</a> with latest version of source files.</p></li>
   <li><p>Extract it and install the application:</p>
+
 {% highlight bash %}
 ./install.sh "/path/to/root/"
 {% endhighlight %}
+
 <p>If you want install it to <code>/</code> you must run it as root, e.g.:</p>
+
 {% highlight bash %}
 sudo ./install.sh
 {% endhighlight %}
+
 <p>If no path is specified it will be installed to <code>/</code> by default.</p></li>
 </ul>
 
-<h3><a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
+<h3><a href="#dependencies" class="anchor" name="dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
 <p>I want note that all were tested on latest version of dependencies.</p>
 <ul>
   <li>Bash (including awk, grep, sed)</li>
@@ -73,33 +78,44 @@ sudo ./install.sh
 <!-- end of install block -->
 
 <!-- howto block -->
-<h2><a name="howto" class="anchor" href="#howto"><span class="octicon octicon-link"></span></a>How to use</h2>
+<h2><a href="#howto" class="anchor" name="howto"><span class="octicon octicon-link"></span></a>How to use</h2>
 <p>If you want to start the daemon just run</p>
+
 {% highlight bash %}
 systemctl start queued
 {% endhighlight %}
+
 <p>If you want to enable daemon autoload run</p>
+
 {% highlight bash %}
 systemctl enable queued
 {% endhighlight %}
+
 <p>But you may change path to configuration file or change parameters. To do it just copy (recommended) the source configuration file to new path</p>
+
 {% highlight bash %}
 cp /etc/queued.conf /path/to/new/queued.conf
 {% endhighlight %}
+
 <p>and edit it. Then copy the source service file to <code>/etc</code>:</p>
+
 {% highlight bash %}
 cp /usr/lib/systemd/system/queued.service /etc/systemd/system/queued-my-profile.service
 {% endhighlight %}
+
 <p>Replace following string in the file:</p>
+
 {% highlight bash %}
 ExecStart=/usr/bin/queued
 {% endhighlight %}
+
 <p>to</p>
+
 {% highlight bash %}
 ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
 {% endhighlight %}
 
-<h3><a name="adding" class="anchor" href="#adding"><span class="octicon octicon-link"></span></a>Adding a job</h3>
+<h3><a href="#adding" class="anchor" name="adding"><span class="octicon octicon-link"></span></a>Adding a job</h3>
 <ol>
   <li>Create shell script with the command (e.g. it have a name <code>script.sh</code>).</li>
   <li>Create priority file (<code>script.sh.pr</code>) with the job priority if it is needed.</li>
@@ -108,15 +124,16 @@ ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
 </ol>
 <p>Also you may use <code>add_queued</code>.</p>
 
-<h2><a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Configuration</h2>
+<h2><a href="#configuration" class="anchor" name="configuration"><span class="octicon octicon-link"></span></a>Configuration</h2>
 <p>All settings are stored in <code>/etc/queued.conf</code>. After edit them you must restart daemon</p>
+
 {% highlight bash %}
 systemctl restart queued
 {% endhighlight %}
 <!-- end of howto block -->
 
 <!-- config block -->
-<h3><a name="options" class="anchor" href="#options"><span class="octicon octicon-link"></span></a>Options</h3>
+<h3><a href="#options" class="anchor" name="options"><span class="octicon octicon-link"></span></a>Options</h3>
 <table>
   <tr>
     <th>WORKDIR</th>
